# luoli-AI

./: .gitignore  Cargo.toml  LICENSE  README.md  VERSION.md
docs/: FEATURES.md  ICON_FORMATS.md  UI.md
python/: setup.py
python/luoli/: __init__.py  assistant.py  monitor.py  security.py  tui_demo.py
src/: ai_config.rs  api.rs  config.rs  executor.rs  lib.rs  main.rs  mcp.rs  monitor.rs  security.rs  tui.rs
ui/assets/: logo_base64.html
ui/web/: index.html
