[package]
name = "luoli-assistant"
version = "0.1.0"
edition = "2021"
authors = ["xzwx666"]
description = "洛璃 - 个人终端助手，具有权限管控和安全监控功能"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.4", features = ["derive"] }
config = "0.14"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
toml = "0.8"
regex = "1.10"
notify = "6.1"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
whoami = "1.4"
csv = "1.3"
tempfile = "3.9"
dirs = "5.0"
crossterm = "0.27"
ratatui = "0.24"

[[bin]]
name = "luoli"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
